--- a/hangman.html
+++ b/hangman.html
@@ -14,14 +14,18 @@
 	<h1>Hangman</h1>
 	<div id="displayStatus"></div>
 	<div id="interactWithPlayer">
+		
+		<input id="guessOfPlayer" type="text"  maxlength="1"><br>
 		<div>
 			<div id='showAlreadyUsedLetters'></div>
 		</div>
-		<input id="guessOfPlayer" type="text" maxlength="1"><br>
 		<button id="confirmActions" onclick="confirmActions(word, answerArray)">Next</button>
 	</div>
 	<div>
 		<button id="restartGame" onClick="window.location.reload()">Restart Game</button>
+	</div>
+	<div id="stop">
+		<button id="stopButton">Stop Game</button>
 	</div>
 </body>
 </html>
