modifier le text

--- a/hangman.html
+++ b/hangman.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width">
 	<title>Hangman</title>
 	<link rel="stylesheet" href="assets/style.css">
-	<script defer src="assets/hangman.js"></script>
+	<script  src="assets/hangman.js" defer></script>
 	
 </head>
 
