ajouter les images

--- a/hangman.html
+++ b/hangman.html
@@ -16,14 +16,17 @@
 	<div id="interactWithPlayer">
 		
 		<input id="guessOfPlayer" type="text"  maxlength="1"><br>
+		<img id="imgReaction" src="" alt="reaction">
 		<div>
 			<div id='showAlreadyUsedLetters'></div>
 		</div>
 		<button id="confirmActions" onclick="confirmActions(word, answerArray)">Next</button>
 	</div>
+	
 	<div>
 		<button id="restartGame" onClick="window.location.reload()">Restart Game</button>
 	</div>
+
 	<div id="stop">
 		<button id="stopButton">Stop Game</button>
 	</div>
